<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PriWord</string>
    <string name="action_settings">Settings</string>
    <string name="Search">Pesquise&#8230;</string>
    <string name="Part_of_Speach">Classes Gramaticais:</string>
    <string name="Select_Part_of_Speach">Click para selecionar as classes</string>
    <string name="Type_word">Digite a palavra</string>
    <string name="Observations">Observações:</string>
    <string name="Add_examples">Adicionar Exemplos</string>
    <string name="Type_an_example">Digite um exemplo</string>
    <string name="Example">Exemplos:</string>
    <string name="OK">OK</string>
    <string name="Definition">Definição:</string>
    <string name="Meaning_the_Word">Defina a palavra!</string>
    <string name="Group">Grupos:</string>
    <string name="Select_Group">Click para selecionar os grupos</string>
    <string name="Verb_Form">Formas do Verbo:</string>
    <string name="Irregular">Irregular</string>
    <string name="Past_Form">Past Form:</string>
    <string name="Past_Participle">Past  Participle:</string>
    <string name="action_add">Adicionar</string>
    <string name="action_edit">Editar</string>
    <string name="action_save">Salvar</string>
    <string name="Translation">Tradução:</string>
    <string name="Type_translation">Digite a(s) Tradução (s)</string>
    <string name="action_cancel">Cancelar</string>

</resources>
