<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.diegobonfim.priword.MainActivity" >
	
	<item android:id="@+id/menu_add"
          android:icon="@android:drawable/ic_menu_add"
          android:title="@string/action_add"
          app:showAsAction="ifRoom|withText" />
	
	<item android:id="@+id/menu_edit"
          android:icon="@android:drawable/ic_menu_edit"
          android:title="@string/action_edit"
          app:showAsAction="ifRoom|withText" />
	
	<item android:id="@+id/menu_save"
          android:icon="@android:drawable/ic_menu_save"
          android:title="@string/action_save"
          app:showAsAction="ifRoom|withText" />
	
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>
